--- a/central_tendency.html
+++ b/central_tendency.html
@@ -27,8 +27,6 @@
 
 <body>
 
-   
-
   <!-- Sub Header -->
   <div class="sub-header">
     <div class="container">
@@ -65,7 +63,7 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
               <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+                <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
                <li class="has-sub">
                  <a href="javascript:void(0)">SPSS</a>
                   <ul class="sub-menu">
@@ -180,7 +178,7 @@
       </div>
     </div>
       <div class="footer">
-        <p>Copyright © 2023 Selvastics. Made with <3 and ☕ in Cologne, Germany. All Rights Reserved.<p>
+        <p>Copyright © 2023 Selvastics. All Rights Reserved. Made with <3 and ☕ in Cologne, Germany.<p>
      </div>
    </section>      
 
