--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         <div class="col-lg-4 col-sm-4">
           <div class="right-icons">
             <ul>
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-behance"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
@@ -91,10 +90,10 @@
               </ul>
             </li>
             <li class="has-sub">
-              <a href="javascript:void(0)">Learning</a>
+              <a href="javascript:void(0)">Resources</a>
               <ul class="sub-menu">
                 <li><a href="descriptives.html">Descriptive Statistics</a></li>
-                <li><a href="#inferential">Inferential Statistics</a></li>
+                <li><a href="inferential.html">Inferential Statistics</a></li>
               </ul>
             </li>            
               
