--- a/central_tendency.html
+++ b/central_tendency.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  <head>
+    <!-- Add the MathJax script -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML"></script>
+  </head>
   <head>
 
     <meta charset="utf-8">
@@ -111,8 +115,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h6>Get all details</h6>
-          <h2>Online Teaching and Learning Tools</h2>
+          <h2>Descriptive Statistics: Measures of Central Tendency</h2>
+          <h6>by SELVASTICS</h6>
         </div>
       </div>
     </div>
@@ -126,13 +130,24 @@
             <div class="col-lg-12">
               <div class="meeting-single-item">
                 <div class="down-content">
-                  <a href="meeting-details.html"><h4>Online Teaching and Learning Tools</h4></a>
-                  <p>Recreio dos Bandeirantes, Rio de Janeiro - RJ, 22795-008, Brazil</p>
-                  <p class="description">
-                    This is an edu meeting HTML CSS template provided by <a href="https://templatemo.com/" target="_blank" rel="nofollow">TemplateMo website</a>. This is a Bootstrap v5.1.3 layout. If you need more free website templates like this one, please visit our website TemplateMo. Please tell your friends about our website. Thank you. If you want to get the latest collection of HTML CSS templates for your websites, you may visit <a rel="nofollow" href="https://www.toocss.com/" target="_blank">Too CSS website</a>. If you need a working contact form script, please visit <a href="https://templatemo.com/contact" target="_parent">our contact page</a> for more info.
-                    
-                    <br><br>You are allowed to use this edu meeting CSS template for your school or university or business. You can feel free to modify or edit this layout. You are not allowed to redistribute the template ZIP file on any other template website. Please contact us for more information.
-                  </p>
+                  <a href="meeting-details.html"><h4>Measures of Central Tendency</h4></a>
+                  <p>Measures of central tendency describe the center of a dataset. The three most commonly used measures of central tendency are the mean, median, and mode.</p>
+                  <hr> <!-- Line break -->
+                  <h5>Mean</h5>
+                  <p>The mean is the average of all the values in the dataset. It is calculated using the formula:</p>
+                  <p class="formula">\(\bar{x} = \frac{1}{n}\sum_{i=1}^{n}x_i\)</p>
+                  <p>The mean is sensitive to outliers, which can skew the value. In some cases, the median may be a better measure of central tendency.</p>
+                  <hr> <!-- Line break -->
+                  <h5>Median</h5>
+                  <p>The median is the middle value when the data is arranged in order. It is calculated using the formula:</p>
+                  <p class="formula">\(med = \begin{cases} x_{(n+1)/2} & \text{if } n \text{ is odd} \\ \frac{1}{2}(x_{n/2} + x_{n/2+1}) & \text{if } n \text{ is even} \end{cases}\)</p>
+                  <p>The median is less sensitive to outliers than the mean, making it a better measure of central tendency in some cases.</p>
+                  <hr> <!-- Line break -->
+                  <h5>Mode</h5>
+                  <p>he mode is the most common value in the dataset. It is the value that occurs with the highest frequency.</p>
+                  <p>The mode is useful for describing the most typical value in a dataset, but it may not be a good measure of </p>
+                  <p>central tendency if the dataset has multiple modes or if the values are continuous.</p>  
+                  <hr> <!-- Line break -->
                   <div class="row">
                     <div class="col-lg-4">
                       <div class="hours">
@@ -143,8 +158,7 @@
                     <div class="col-lg-4">
                       <div class="location">
                         <h5>Location</h5>
-                        <p>Recreio dos Bandeirantes, 
-                        <br>Rio de Janeiro - RJ, 22795-008, Brazil</p>
+                        <p>Recreio dos Bandeirantes, <br>Rio de Janeiro - RJ, 22795-008, Brazil</p>
                       </div>
                     </div>
                     <div class="col-lg-4">
@@ -177,10 +191,12 @@
         </div>
       </div>
     </div>
-      <div class="footer">
-        <p>Copyright © 2023 Selvastics. All Rights Reserved. Made with <3 and ☕ in Cologne, Germany.<p>
-     </div>
-   </section>      
+    <div class="footer">
+      <p>Copyright © 2023 Selvastics. All Rights Reserved. Made with <3 and ☕ in Cologne, Germany.</p>
+    </div>
+  </section>
+  
+  
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
