--- a/meeting-details.html
+++ b/meeting-details.html
@@ -180,7 +180,7 @@
       </div>
     </div>
       <div class="footer">
-        <p>Copyright © 2023 Selvastics. Made with <3 and ☕ in Cologne, Germany. All Rights Reserved. </p>
+        <p>Copyright © 2023 Selvastics. Made with <3 and ☕ in Cologne, Germany. All Rights Reserved.<p>
      </div>
    </section>      
 
