--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
     <video autoplay muted loop id="bg-video">
-      <source src="assets/images/course-video.mp4" type="video/mp4" />
+      <source src="assets/images/1.png" type="video/mp4" />
     </video>
 
     <div class="video-overlay header-text">
