--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
-    <video autoplay muted loop id="bg-video">
-      <source src="assets/images/1.png" type="video/mp4" />
-    </video>
+    <image autoplay muted loop id="bg-video">
+      <source src="assets/images/1.png" alt="">
+    </image>
 
     <div class="video-overlay header-text">
       <div class="container">
