--- a/index.html
+++ b/index.html
@@ -156,31 +156,29 @@
    </div>
   </header>
   <!-- ***** Header Area End ***** -->
-  <!-- ***** Main Banner Area Start ***** -->
-  <section class="section main-banner" data-section="section1" id="top">
-   <img alt="" autoplay="" id="bg-video" loop="" muted="" src="path_to_your_banner_image.jpg"/>
-   <source src="" type=""/>
-   <div class="video-overlay header-text">
-    <div class="container">
-     <div class="row">
-      <div class="col-lg-12">
-       <div style="display:flex; justify-content:flex-start; align-items:flex-start;">
-        <div class="caption" style="margin-left: 120px;">
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <h6></h6>
-          <h2>Welcome to Selvastics</h2>
-          <p>This is a dedicated platform for exploring the fascinating world of statistics and probability. Here you will find comprehensive guides and tutorials on statistical computing using SPSS and R.</p>
-          <p>Dive into a wide range of articles that cover various topics in these fields. From clear explanations of fundamental concepts to in-depth discussions of significant research and practical applications of statistical methods, there's something here for everyone.</p>
-          <p>Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge!</p>
-        </div>        
-        <img alt="Selvastics Image" src="assets/images/dd_f.png" style="position:absolute; top:100px;right: 180px; max-width:24%; height:auto;"/>
-      </div>
-      </div>
+<!-- ***** Main Banner Area Start ***** -->
+<section class="section main-banner" data-section="section1" id="top">
+  <div style="width: 100%; height: 800px;"></div>  <!-- Placeholder div -->
+  <div class="video-overlay header-text">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-12">
+      <div style="display:flex; justify-content:flex-start; align-items:flex-start;">
+       <div class="caption" style="margin-left: 120px;">
+         <h6></h6>
+         <h2>Welcome to Selvastics</h2>
+         <p>This is a dedicated platform for exploring the fascinating world of statistics and probability. Here you will find comprehensive guides and tutorials on statistical computing using SPSS and R.</p>
+         <p>Dive into a wide range of articles that cover various topics in these fields. From clear explanations of fundamental concepts to in-depth discussions of significant research and practical applications of statistical methods, there's something here for everyone.</p>
+         <p>Whether you're a student, an educator, a professional, or simply an enthusiast in statistics and probability, this blog is designed to pique your interest and expand your knowledge!</p>
+       </div>        
+       <img alt="Selvastics Image" src="assets/images/dd_f.png" style="position:absolute; top:100px;right: 180px; max-width:24%; height:auto;"/>
+     </div>
      </div>
     </div>
    </div>
-  </section>
-  <!-- ***** Main Banner Area End ***** -->
+  </div> 
+</section>
+<!-- ***** Main Banner Area End ***** -->
   <section class="services">
    <div class="container">
     <div class="row">
