--- a/descriptives.html
+++ b/descriptives.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Template Mo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>Education Template - Meeting Detail Page</title>
+    <title>Selvastics: Statistics and Data Analysis Tutorials</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-lg-8 col-sm-8">
           <div class="left-content">
-            <p>This is a statistics blog by Selvastics.</p>
+            <p>This is a statistics blog by Clievins Selva.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-4">
