--- a/descriptives.html
+++ b/descriptives.html
@@ -172,25 +172,15 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   
-  <!DOCTYPE html>
-  <html lang="en">
-  
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Descriptive Statistics</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  
   <body>
-    <section class="meetings-page" id="meetings">
+    <section class="meetings-page" id="meetings";>
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="row">
               <div class="col-lg-12">
                 <div class="meeting-single-item">
-                  <div class="down-content">
+                  <div class="down-content" style="border-top-left-radius: 20px; border-top-right-radius: 20px;">
                     <h1>Descriptive Statistics</h1>
                     <p>In this section, I'll discuss some key statistical indices that are commonly used to describe data:</p>
                     <hr>
