email support implemented

--- a/descriptives.html
+++ b/descriptives.html
@@ -191,10 +191,7 @@
                         <li>
                           <h4>Mean</h4>
                           <p>
-                            The mean (or average) is the sum of all scores divided by the number of scores. It is calculated by summing all the values in a dataset and dividing by the number of values.
-                          </p>
-                          <p>
-                            Mathematically, for a dataset \(X\) with \(N\) values \(x_1, x_2, ..., x_N\), the mean \(\mu\) is given by:
+                            The mean (or average) is the sum of all scores divided by the number of scores. Mathematically, for a dataset \(X\) with \(N\) values \(x_1, x_2, ..., x_N\), the mean \(\mu\) is given by:
                             <br>
                             \(\mu = \frac{1}{N}\sum_{i=1}^{N}x_i\).
                           </p>
