--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
      <div class="col-lg-4">
       <div class="categories">
        <h4>
-        Meeting Categories
+        Begin Your Journey Here
        </h4>
        <ul>
         <li>
@@ -317,8 +317,8 @@
         </li>
        </ul>
        <div class="main-button-red">
-        <a href="spss.html">
-         All Upcoming Meetings
+        <a href="#questions-section">
+         Any Questions?
         </a>
        </div>
       </div>
@@ -329,7 +329,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://www.kaggle.com/datasets"target="_blank">
-           <img alt="Find data sets" src="assets/images/meeting-01.jpg"/>
+           <img alt="Find data sets" src="assets/images/1.4.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -352,7 +352,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://r-graph-gallery.com/all-graphs.html" target="_blank">
-           <img alt="R Graph Gallery" src="assets/images/meeting-02.jpg"/>
+           <img alt="R Graph Gallery" src="assets/images/1.6.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -366,7 +366,7 @@
            <a href="https://r-graph-gallery.com/all-graphs.html" style="text-decoration: underline;" target="_blank">
             R Graph Gallery
            </a>
-           for a collection of over 400 Charts.
+           for a collection of over 400 Charts with code.
           </p>
          </div>
         </div>
@@ -375,7 +375,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://paperswithcode.com/datasets" target="_blank">
-           <img alt="Find data sets" src="assets/images/meeting-03.jpg"/>
+           <img alt="Find data sets" src="assets/images/1.5.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -398,7 +398,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://www.khanacademy.org/math/statistics-probability" target="_blank">
-           <img alt="Find data sets" src="assets/images/meeting-04.jpg"/>
+           <img alt="Find data sets" src="assets/images/1.7.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -438,7 +438,7 @@
                 <div class="col-lg-9 align-self-center" style="margin-top: -130px;">
                   <div class="row">
                     <div class="col-lg-12">
-                      <form action="path_to_your_server_side_script" id="contact" method="post">
+                      <form action="https://formspree.io/f/xrgweglz" id="contact" method="post">
                         <div class="row">
                           <div class="col-lg-12">
                             <h2>
@@ -446,6 +446,7 @@
                             </h2>
                           </div>
                           <div class="col-lg-4">
+                            <div id="questions-section"></div>
           
               <fieldset>
                <input id="name" name="name" placeholder="YOURNAME...*" required="" type="text"/>
@@ -482,22 +483,22 @@
          <div class="right-info">
           <ul>
            <li>
-            <h6>
+            <h6 style="font-size: 1.2em;">
              Email Address
             </h6>
-            <span>
-             info@meeting.edu
+            <span style="font-size: 0.8em;">
+             cselva@wwu.de
             </span>
            </li>
            <li>
            </li>
            <li>
-            <h6>
-             Website URL
+            <h6 style="font-size: 1.2em;">
+             Github URL
             </h6>
-            <span>
-             www.meeting.edu
-            </span>
+            <span style="font-size: 0.8em;">
+              www.github.com/selvastics
+          </span>
            </li>
           </ul>
          </div>
