several bug fixed
The white banner issue in full mode is finally fixed

--- a/index Kopie.html
+++ b/index Kopie.html
@@ -20,6 +20,8 @@
 -->
  </head>
  <body>
+  <!-- Add the overflow CSS rule here -->
+    
   <!-- Sub Header -->
   <div class="sub-header">
    <div class="container">
@@ -329,7 +331,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://www.kaggle.com/datasets"target="_blank">
-           <img alt="Find data sets" src="assets/images/1.4.png"/>
+           <img alt="Find data sets" src="assets/images/.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -352,7 +354,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://r-graph-gallery.com/all-graphs.html" target="_blank">
-           <img alt="R Graph Gallery" src="assets/images/1.6.png"/>
+           <img alt="R Graph Gallery" src="assets/images/.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -375,7 +377,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://paperswithcode.com/datasets" target="_blank">
-           <img alt="Find data sets" src="assets/images/1.5.png"/>
+           <img alt="Find data sets" src="assets/images/.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -398,7 +400,7 @@
         <div class="meeting-item">
          <div class="thumb">
           <a href="https://www.khanacademy.org/math/statistics-probability" target="_blank">
-           <img alt="Find data sets" src="assets/images/1.7.png"/>
+           <img alt="Find data sets" src="assets/images/.png"/>
           </a>
          </div>
          <div class="down-content">
@@ -483,21 +485,21 @@
          <div class="right-info">
           <ul>
            <li>
-            <h6 style="font-size: 1.2em;">
+            <h6>
              Email Address
             </h6>
-            <span style="font-size: 0.8em;">
+            <span>
              cselva@wwu.de
             </span>
            </li>
            <li>
            </li>
            <li>
-            <h6 style="font-size: 1.2em;">
+            <h6>
              Github URL
             </h6>
-            <span style="font-size: 0.8em;">
-              www.github.com/selvastics
+            <span>
+              www.github.com
           </span>
            </li>
           </ul>
