modify for mobile version

--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
      <div class="col-12">
       <nav class="main-nav">
 <!-- ***** Logo Start ***** -->
-<a class="logo" href="index.html">
-  <img src="assets/images/selvastics_d.png" alt="Selvastics logo" style="max-height: 70px; width: auto;">
+<a class="logo" href="index.html" style="z-index:1;">
+  <img src="assets/images/selvastics_d.png" alt="Selvastics logo" class="img-fluid" style="max-height: 70px; width: auto;">
 </a>
 <!-- ***** Logo End ***** -->
+
 
        <!-- ***** Menu Start ***** -->
        <ul class="nav">
@@ -163,8 +164,8 @@
    <div class="container">
     <div class="row">
      <div class="col-lg-12">
-      <div class="row" style="justify-content:flex-start; align-items:flex-start;">
-       <div class="caption col-lg-8" style="margin-left: 120px;">
+      <div class="row" style="justify-content:center; align-items:center;">
+       <div class="caption col-lg-8" style="margin: 0 auto;">
          <h6></h6>
          <h2>Welcome to Selvastics</h2>
          <p>This is a dedicated platform for exploring the fascinating world of statistics and probability. Here you will find comprehensive guides and tutorials on statistical computing using SPSS and R.</p>
@@ -173,7 +174,7 @@
        </div>        
        <div class="col-lg-4" style="margin-left: auto; margin-top: 80px; margin-right: 45px;">
         <img class="img-fluid hide-on-mobile" alt="Selvastics Image" src="assets/images/dd_f.png" style="max-width:100%; height:auto;"/>
-       </div>
+       </div>       
        <style>
         @media screen and (max-width: 1200px) { /* Change to the width at which to hide the image */
             .hide-on-mobile {
